--- a/Speart/reportes/ReporteActividades.jrxml
+++ b/Speart/reportes/ReporteActividades.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="ReporteActividades" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="ReporteActividades" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="f2afb7ad-8bf4-4804-ba8b-8c5785ea0007">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="122"/>
 	<parameter name="prm_agenda" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
@@ -13,14 +13,14 @@
 	<parameter name="prm_hasta" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[select 	nombre_actividad ACTIVIDADES,
-	count(nombre_actividad)TOTAL
+	porcentaje TOTAL
 from itemagenda,agenda
 where agenda_id=agenda.id
 and agenda.nombre="'"+$P{prm_agenda}+"'"
 and completada=$P{prm_completada}]]>
 	</queryString>
 	<field name="ACTIVIDADES" class="java.lang.String"/>
-	<field name="TOTAL" class="java.lang.Long"/>
+	<field name="TOTAL" class="java.lang.Double"/>
 	<variable name="TOTAL" class="java.lang.Integer" calculation="Sum">
 		<variableExpression><![CDATA[$F{TOTAL}]]></variableExpression>
 		<initialValueExpression><![CDATA[]]></initialValueExpression>
@@ -31,46 +31,46 @@ and completada=$P{prm_completada}]]>
 	<title>
 		<band height="182" splitType="Stretch">
 			<staticText>
-				<reportElement x="172" y="11" width="264" height="20"/>
+				<reportElement uuid="a7278a8f-64ca-4790-a940-bfa92839b023" x="172" y="11" width="264" height="20"/>
 				<textElement/>
 				<text><![CDATA[INSTITUTO ECUATORIANO DE SEGURIDAD SOCIAL]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="173" y="41" width="283" height="20"/>
+				<reportElement uuid="130bc748-5edd-4bec-9062-82bf001c0e08" x="173" y="41" width="283" height="20"/>
 				<textElement/>
 				<text><![CDATA[DEPARTAMENTO DE RIESGOS DEL TRABAJO DE LOJA]]></text>
 			</staticText>
 			<textField pattern="EEEEE dd MMMMM yyyy">
-				<reportElement x="240" y="72" width="166" height="20"/>
+				<reportElement uuid="5627cf08-5e72-40cb-a585-635291ef68a0" x="240" y="72" width="166" height="20"/>
 				<textElement/>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="173" y="72" width="56" height="20"/>
+				<reportElement uuid="9364dbae-b050-4dd1-9200-951ab065acbc" x="173" y="72" width="56" height="20"/>
 				<textElement/>
 				<text><![CDATA[FECHA:]]></text>
 			</staticText>
 			<image>
-				<reportElement x="2" y="11" width="171" height="169"/>
-				<imageExpression><![CDATA["C:\\Users\\alf\\Documents\\NetBeansProjects\\SpeiessDefinitivo\\reportes\\LOGO.png"]]></imageExpression>
+				<reportElement uuid="606ab755-f96c-4051-8cc0-1ace3781b9e5" x="2" y="11" width="171" height="169"/>
+				<imageExpression><![CDATA["..\\reportes\\LOGO.png"]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement x="172" y="106" width="85" height="20"/>
+				<reportElement uuid="1ab7e35b-3a1f-4ff7-b471-e5f45b47111b" x="172" y="106" width="85" height="20"/>
 				<textElement/>
 				<text><![CDATA[FECHA DESDE:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="172" y="141" width="85" height="20"/>
+				<reportElement uuid="84af73ac-9797-4313-b34a-a8c3b97d2047" x="172" y="141" width="85" height="20"/>
 				<textElement/>
 				<text><![CDATA[FECHA HASTA:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="270" y="106" width="136" height="20"/>
+				<reportElement uuid="19351b8b-7ceb-44ec-ad0a-bf25a6fd2d5c" x="270" y="106" width="136" height="20"/>
 				<textElement/>
 				<textFieldExpression><![CDATA[$P{prm_desde}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="270" y="141" width="136" height="20"/>
+				<reportElement uuid="1156f687-ed27-41c5-a0fb-b19a941f584c" x="270" y="141" width="136" height="20"/>
 				<textElement/>
 				<textFieldExpression><![CDATA[$P{prm_hasta}]]></textFieldExpression>
 			</textField>
@@ -82,12 +82,12 @@ and completada=$P{prm_completada}]]>
 	<columnHeader>
 		<band height="25" splitType="Stretch">
 			<staticText>
-				<reportElement x="26" y="2" width="360" height="20"/>
+				<reportElement uuid="e6fad4cb-9627-4fba-9cfe-eb2b7cc5796d" x="26" y="2" width="360" height="20"/>
 				<textElement/>
 				<text><![CDATA[ACTIVIDADES]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="455" y="5" width="100" height="20"/>
+				<reportElement uuid="d5918fbf-0af9-4c7f-9a48-5178cec1603d" x="455" y="5" width="100" height="20"/>
 				<textElement/>
 				<text><![CDATA[SUB TOTAL]]></text>
 			</staticText>
@@ -96,15 +96,15 @@ and completada=$P{prm_completada}]]>
 	<detail>
 		<band height="46" splitType="Stretch">
 			<rectangle>
-				<reportElement x="0" y="0" width="555" height="42" backcolor="#CCCCCC"/>
+				<reportElement uuid="208e9f69-5767-4122-94a5-7626c55a7876" x="0" y="0" width="555" height="42" backcolor="#CCCCCC"/>
 			</rectangle>
 			<textField>
-				<reportElement x="26" y="12" width="360" height="20"/>
+				<reportElement uuid="c9b93b5a-2268-493e-9a0a-d4ee73ab6ef6" x="26" y="12" width="360" height="20"/>
 				<textElement/>
 				<textFieldExpression><![CDATA[$F{ACTIVIDADES}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="455" y="12" width="100" height="20"/>
+				<reportElement uuid="828f4658-6d92-4091-851d-33e1a9d3203c" x="455" y="12" width="100" height="20"/>
 				<textElement/>
 				<textFieldExpression><![CDATA[$F{TOTAL}]]></textFieldExpression>
 			</textField>
@@ -113,12 +113,12 @@ and completada=$P{prm_completada}]]>
 	<columnFooter>
 		<band height="27" splitType="Stretch">
 			<staticText>
-				<reportElement x="386" y="7" width="50" height="20"/>
+				<reportElement uuid="0188ee82-cc01-4f19-9c44-c135b8cffde2" x="386" y="7" width="50" height="20"/>
 				<textElement/>
 				<text><![CDATA[TOTAL:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="455" y="7" width="100" height="20"/>
+				<reportElement uuid="a59b22da-a8ea-4f9d-b83e-fa48aed2f3d5" x="455" y="7" width="100" height="20"/>
 				<textElement/>
 				<textFieldExpression><![CDATA[$V{TOTAL}]]></textFieldExpression>
 			</textField>
