--- a/Speart/reportes/reporteInforme.jrxml
+++ b/Speart/reportes/reporteInforme.jrxml
@@ -39,7 +39,7 @@ and meta.usuario_idPersona=persona.idPersona]]>
 			</staticText>
 			<image>
 				<reportElement x="10" y="10" width="171" height="169"/>
-				<imageExpression><![CDATA["..\\reportes\\LOGO.png"]]></imageExpression>
+				<imageExpression><![CDATA[".\\reportes\\LOGO.png"]]></imageExpression>
 			</image>
 			<staticText>
 				<reportElement x="180" y="10" width="264" height="20"/>
